--- a/前端/面试指南.md
+++ b/前端/面试指南.md
@@ -93,27 +93,22 @@
 
 1. 方法 get/POST/PUT/DELETE
 2. 状态码 1xx - 5xx
-   - 1XX 信息 100
-   - 2XX 成功 200 OK 204 No Content
+   - 1XX 信息
+   - 2XX 成功 204 No Content
    - 3XX 重定向 304
    - 4XX 客户端错误 404 请求资源不存在
-   - 5XX 服务器错误 500 504
-
-# 算法
-
-1. 时间复杂度和空间复杂度
-2. ![](https://files.catbox.moe/6ir6x3.png)
+   - 5XX 服务器错误 500
 
 # JS
 
 1. 数据类型与隐式转换
-2. 作用域与 this
-3. 原型与原型链
+2. 作用域与闭包
+3. this 与原型链
 4. 异步与单线程
 
 # TS
 
-[慕课](http://www.imooc.com/wiki/typescriptlesson/typecompatibility.html)
+[From 慕课](http://www.imooc.com/wiki/typescriptlesson/typecompatibility.html)
 
 - 基础类型
   1. 枚举 enum
@@ -150,14 +145,7 @@
 [掘金](https://juejin.cn/post/6844903845227659271#heading-2)
 [搜狐](https://www.sohu.com/a/279549933_713028)
 
-1. 字符
-2. 循环与重复 []
-3. 边界
-4. 子表达式 分组 / 回溯引用 / 逻辑处理
-
 > 千分位 "123456789999".replace(/(?!^)(?=(\d{3})+$)/g, ",");
-
-# webpack / vite
 
 # vue
 
@@ -229,15 +217,15 @@ scrollBehavior (to, from, savedPosition) {
 - 少用 iframe 不用 js 输出
 - 图片 + alt alt-当图片不存在显示
 
-# 奇怪的知识
+# ES6+
 
-1. [??与?.](https://www.cnblogs.com/zhigu/p/13962661.html) 空值合并操作符,可选链操作符
-2. 正则表达式实现一键替换
-3.
+- [??与?.](https://www.cnblogs.com/zhigu/p/13962661.html)
+  1.  空值合并操作符
+  2.  可选链操作符
+- vscode 中正则表达式实现一键替换
 
 # 高效的工作流
 
-1. 代码与重构 打包工具 + ESlint + 自动化测试
-2. 内外网测试
-3. 项目自动化部署
-4. Chrom 调试技巧 [掘金](https://juejin.cn/post/6844903508760608776#heading-20)
+1. 重构代码
+2. 项目自动化部署
+3. [Chrom 调试技巧](https://juejin.cn/post/6844903508760608776#heading-20)
