打造网站调整，侧边栏展示调整

--- a/文章/打造一个知识网站.md
+++ b/文章/打造一个知识网站.md
@@ -22,7 +22,7 @@ markdown 编辑 ---> git 推送 ---> 网站实时更新
 2. 不需要 SEO
 3. 开源
 
-![为什么不](https://files.catbox.moe/5qyweg.png ":size=70%")
+![为什么不](https://p3-juejin.byteimg.com/tos-cn-i-k3u1fbpfcp/9f24833dd69d4ee99db6d232206f82cb~tplv-k3u1fbpfcp-zoom-in-crop-mark:1304:0:0:0.awebp ":size=70%")
 
 ## 本地搭建与开发
 
