--- a/前端/面试指南.md
+++ b/前端/面试指南.md
@@ -1,5 +1,3 @@
-[TOC]
-
 # git
 
 1. [工作中的 git](https://juejin.cn/post/6974184935804534815#heading-20)
@@ -10,7 +8,10 @@
 - revert reset
 - rebase merge
 - cherry-pick
-- add commit push pull fetch branch checkout log
+- add commit push pull fetch
+- branch
+  - checkout
+- log
 
 # CSS
 
@@ -222,7 +223,6 @@ scrollBehavior (to, from, savedPosition) {
 - [??与?.](https://www.cnblogs.com/zhigu/p/13962661.html)
   1.  空值合并操作符
   2.  可选链操作符
-- vscode 中正则表达式实现一键替换
 
 # 高效的工作流
 
