feat: 前后端，运维栏目

--- a/个人文章/打造一个知识网站.md
+++ b/个人文章/打造一个知识网站.md
@@ -8,6 +8,12 @@
 
 > 原先小王使用有道云笔记来记录文档, 最近在使用中发现一些不便, 如页内跳转, 预览查看等。在查看一些框架官网时发现这种文档展示方式有很多优点, 不仅目录**结构清晰**, 而且支持**站内搜索跳转, 外链跳转**。加上**可配置插件**, 增强了扩展性, 极大的提升了用户的阅读体验。小王准备打造一个专注于内容创作，网站实时更新的工作流。
 
+1. 全局搜索
+2. 容灾备份，方便转移，便于分享
+3. 访问统计
+4. SEO，广告引入
+
+
 markdown 编辑 ---> git 推送 ---> 网站实时更新
 
 # 选用 docsify
