--- a/前端/体系建立.md
+++ b/前端/体系建立.md
@@ -1,18 +1,3 @@
-# git
-
-1. [工作中的 git](https://juejin.cn/post/6974184935804534815#heading-20)
-1. [book](https://git-scm.com/book/zh/v2)
-1. [book 总结](https://bingohuang.gitbooks.io/progit2/content/02-git-basics/sections/undoing.html)
-
-- stash status
-- revert reset
-- rebase merge
-- cherry-pick
-- add commit push pull fetch
-- branch
-  - checkout
-- log
-
 # CSS
 
 1. css 选择器 ID,类,标签,\*,伪类选择器 :link，:visited :focus，:hover，:active, 伪元素::after/::before, 关系选择器 X +>~ Y , [attr] [:checked] ,
@@ -73,8 +58,6 @@
    3. 控制指令 @if @for @each
    4. 混合指令 @mixin @include
    5. 模块 @import
-9. animation/transtion/transform/filter/box-shadow/@media
-10. 从右向左的渲染机制
 
 # html
 
@@ -140,13 +123,6 @@
   5.  存取器 get set 语法糖
   6.  抽象 abstract 关键字是用于定义抽象类和在抽象类内部定义抽象方法。
 - infer 声明一个不确定的类型变量
-
-# 正则
-
-[掘金](https://juejin.cn/post/6844903845227659271#heading-2)
-[搜狐](https://www.sohu.com/a/279549933_713028)
-
-> 千分位 "123456789999".replace(/(?!^)(?=(\d{3})+$)/g, ",");
 
 # vue
 
@@ -224,8 +200,6 @@ scrollBehavior (to, from, savedPosition) {
   1.  空值合并操作符
   2.  可选链操作符
 
-# 高效的工作流
+# 调试技巧
 
-1. 重构代码
-2. 项目自动化部署
-3. [Chrom 调试技巧](https://juejin.cn/post/6844903508760608776#heading-20)
+1. [Chrome 调试技巧](https://juejin.cn/post/6844903508760608776#heading-20)
