--- a/前端/知识体系.md
+++ b/前端/知识体系.md
@@ -1,4 +1,4 @@
-# CSS
+# 1. CSS
 
 1. css 选择器 ID,类,标签,\*,伪类选择器 :link，:visited :focus，:hover，:active, 伪元素::after/::before, 关系选择器 X +>~ Y , [attr] [:checked] ,
 2. 优先级
@@ -59,7 +59,7 @@
    4. 混合指令 @mixin @include
    5. 模块 @import
 
-# html
+# 2. html
 
 1. 语义化标签 利于阅读维护,SEO
 2. 行内元素 img span
@@ -73,24 +73,14 @@
    5. 接收 HTML CSS JS 构建 dom 树 -> 构建 render 树 -> 布局 render 树 -> 绘制 render 树
    6. 4 次挥手
 
-# http
-
-1. 方法 get/POST/PUT/DELETE
-2. 状态码 1xx - 5xx
-   - 1XX 信息
-   - 2XX 成功 204 No Content
-   - 3XX 重定向 304
-   - 4XX 客户端错误 404 请求资源不存在
-   - 5XX 服务器错误 500
-
-# JS
+# 3. JS
 
 1. 数据类型与隐式转换
 2. 作用域与闭包
 3. this 与原型链
 4. 异步与单线程
 
-# TS
+# 4. TS
 
 [From 慕课](http://www.imooc.com/wiki/typescriptlesson/typecompatibility.html)
 
@@ -124,9 +114,9 @@
   6.  抽象 abstract 关键字是用于定义抽象类和在抽象类内部定义抽象方法。
 - infer 声明一个不确定的类型变量
 
-# vue
+# 5. vue
 
-## [vue2.x](https://juejin.cn/post/6844903918753808398#heading-7)
+## 5.1. [vue2.x](https://juejin.cn/post/6844903918753808398#heading-7)
 
 1. 生命周期
    - beforeCreate
@@ -172,7 +162,7 @@ scrollBehavior (to, from, savedPosition) {
   }
 ```
 
-## vue3
+## 5.2. vue3
 
 [与 2.x 对比](https://juejin.cn/post/6940454764421316644#heading-2)
 
@@ -180,26 +170,20 @@ scrollBehavior (to, from, savedPosition) {
 2. teleport 传送门 dialog 抽离 APP dom z-index
 3. Suspense 异步组件 loading
 
-# 多端开发
+# 6. 多端开发
 
 1. [uni-app](https://uniapp.dcloud.io/)
 2. [微信小程序](https://developers.weixin.qq.com/miniprogram/dev/framework/)
 
-# 性能优化
+# 7. 性能优化
 
 1.SEO 优化
-
 - title 的重要性
 - 语义化 HTML 重要 HTML 放前面
 - 少用 iframe 不用 js 输出
 - 图片 + alt alt-当图片不存在显示
 
-# ES6+
 
-- [??与?.](https://www.cnblogs.com/zhigu/p/13962661.html)
-  1.  空值合并操作符
-  2.  可选链操作符
-
-# 调试技巧
+# 9. 调试技巧
 
 1. [Chrome 调试技巧](https://juejin.cn/post/6844903508760608776#heading-20)
