--- a/前端/TODO
+++ b/前端/TODO
@@ -1,6 +1,6 @@
 ☐ 基础篇
-    ☐  js数据类型与类型转换
-    ☐ 大Object 和小object 区别
+    ☐ js数据类型与类型转换
+    ☐ 大Object 和小object 有什么区别
 ☐ js异步与事件循环
 ☐ 学习路径篇 
-☐ 工程化实战篇
+☐ 渲染方式篇 next.js
