--- a/编程通用/加解密.md
+++ b/编程通用/加解密.md
@@ -9,3 +9,27 @@
 1. base64
 2. md5
 3. AES/DES
+
+http : 80端口
+https :  SSL/TLS   应用层：http   表示  会   传输层TCP/IP   443 端口
+CA证书 : 
+
+
+
+
+1. 对称加密  双方约定同一个秘钥，  客户端：加密(秘钥+发送消息)，服务端：通过秘钥解密(收到的消息)
+   1. AES
+2. 非对称加密  客户端公钥加密与服务端私钥解密
+   1. RSA
+3. 单向散列加密算法
+   1. MD5
+4. 其他
+   1. base64
+
+
+
+网络安全实践
+
+1. 控制台锁定
+2. TSL/SSL   HTTPS
+3. 非对称加密
