feat：编程思想等

--- a/编程通用/加解密.md
+++ b/编程通用/加解密.md
@@ -1,20 +1,12 @@
 # 计算机字符编码
-
 1. ASCLL
 2. unicode
 3. utf-8
 
 # 加解密
-
 1. base64
 2. md5
 3. AES/DES
-
-http : 80端口
-https :  SSL/TLS   应用层：http   表示  会   传输层TCP/IP   443 端口
-CA证书 : 
-
-
 
 
 1. 对称加密  双方约定同一个秘钥，  客户端：加密(秘钥+发送消息)，服务端：通过秘钥解密(收到的消息)
@@ -26,10 +18,14 @@ CA证书 :
 4. 其他
    1. base64
 
+# http 与 https 区别
+http : 80端口
+https : CA证书   SSL/TLS    443 端口
+    应用层：http    传输层TCP/IP   
 
 
-网络安全实践
+# 网络安全实践
 
-1. 控制台锁定
+1. 控制台锁定  无限debugger
 2. TSL/SSL   HTTPS
 3. 非对称加密
