--- a/编程通用/编程思想.md
+++ b/编程通用/编程思想.md
@@ -2,10 +2,8 @@
 1. 面向对象编程  OOP   
    1. 面向切面编程 AOP 
 2. 函数式编程 FP
-3. 面向过程
-4. 
-5. 命令式编程
-6. 响应函数编程
+3. 命令式编程
+4. 声明式编程
 
 # 设计原则
 单一职责原则（Single responsibility principle，SRP）：一个类应该有且仅有一个变化的原因
@@ -13,12 +11,11 @@
 里氏替换原则（Liskov substitution principle，LSP）：子类型（subtype）必须能够替换其父类型（base type）
 接口隔离原则（Interface segregation principle，ISP）：不应强迫使用者依赖于它们不用的方法
 依赖倒置原则（Dependency inversion principle，DIP）：高层模块不应依赖于低层模块，二者应依赖于抽象；抽象不应依赖于细节，细节应依赖于抽象
-
+DRY
 
 # 设计模式
 1. 观察者模式     出版社和用户
 2. 发布-订阅模式   出版社-报刊亭-用户
+3. 单例模式
 
 
-
-# MVM  MVVM
