feat:一些游戏类别

--- a/个人文章/README
+++ b/个人文章/README
@@ -1,1 +1,12 @@
 博客类文章
+
+
+认识
+知识
+技能
+
+
+
+
+最好的副业就是教别人开展副业，或者直接教别人赚钱，然后收学费和韭菜培训咨询费，等赚到钱了，买点轻奢的物品，然后进一步宣传三年实现从月薪三千到月入三万，然后吸引更多的韭菜，然后开着房车环游世界，拍点路上的风景，继续宣传，然后会有更多的韭菜羡慕想学习方法，然后一边旅游，一边韭菜们买账，关键还是韭菜们自愿掏钱的，教的东西就是如何开展副业，如何宣传，如何让他们模仿自己的模式收割新的韭菜，肯定有大聪明能学到精髓，然后开始，他又成了继续宣传的好材料，几个月内培养了多个能月入过万的徒弟，立马让别人出现既然别人能学会，我也能学，然后心甘情愿交学费。如此往复，自己再搞点宣传，写点课程，通过卖课继续收钱，这都不用自己去教了，然后雇人运营，雇人剪辑，或者都不用雇人，直接让徒弟们去做，免费去做，美其名曰这都是在教你们，让他们感觉学到了东西，欢快的干着为自己挣钱的活儿，然后有一天别人醒过来了，感觉你赚了太多钱，眼红不舒服了，然后骂你割韭菜，骂你搞传销，然后你就要归隐田园，销声匿迹，享受生活，当然也可以反抗，说他们都是造谣，让赚到钱的徒子徒孙们发水帖说自己的赚钱事迹，略去过程，就描述自己原来生活有多苦，现在过得有多好。然后静观其变，不过往往赚到钱的依然是少数，会被舆论击垮。那就依然要韬光养晦，继续学习新的方法，比如追随风口，拍拍短视频进行宣传，不明目卖课，直接挂咨询，搭建私域，个人微信一对一沟通交流，在外人不知道的情况下，单一忽悠人买课。
+其实现在可能就有很多这样会玩的大佬，怎么说呢，不创造真正的社会价值，单纯通过营销和宣传博流量的手段指导个人致“富”。而且由于很多人都想赚钱，这个方法百试百灵。
