--- a/个人文章/公众号/网赚/游戏/原神.md
+++ b/个人文章/公众号/网赚/游戏/原神.md
@@ -1,6 +1,6 @@
 # 前置
 
-经常听说可以原神代肝赚 m，这次来分析一下原神代肝如何入场
+经常刷视频看到原神代肝赚 m，这次来分析一下原神代肝这个项目如何入场以及目前市场情况
 
 # 模式分析
 
@@ -12,7 +12,8 @@
 # 代肝价格表
 
 原神代肝的价格表一般根据任务的难度、时间和数量来定，不同的平台或者个人可能会有不同的收费标准。根据我的搜索结果 ³⁴，以下是一些常见的价格范例：
-
+![3a7abdfda2ec8de65c54b9b163da005](https://cdn.jsdelivr.net/gh/SilverComet7/PicGo@main/project/3a7abdfda2ec8de65c54b9b163da005.jpg)
+![b49a84794b11bf7bfa1d3864e4e1b84](https://cdn.jsdelivr.net/gh/SilverComet7/PicGo@main/project/b49a84794b11bf7bfa1d3864e4e1b84.jpg)
 当然，这些价格只是参考，具体还要根据市场供需和双方协商来决定。
 
 # 初始客源
